add prettier config with nodemon

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "practice"
   ],
   "author": "sakshi singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
+  }
 }
